<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/white"
        android:padding="16dp"
        tools:context=".ui.fragment.NavigationDrawerFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fillViewport="true"
            android:scrollbars="none"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="afterDescendants"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Top Features"
                    android:textSize="14sp"
                    android:layout_marginVertical="12dp"
                    android:textColor="@color/black_5"
                    android:textStyle="bold"
                    />

                <LinearLayout
                    android:id="@+id/btn_text_translator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/img_translate"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_translator"
                        android:layout_marginHorizontal="12dp"
                        android:textSize="14sp"
                        android:textColor="@color/black_7"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_voice_translator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="12dp"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/img_voice"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/voice_translator"
                        android:layout_marginHorizontal="12dp"
                        android:textSize="14sp"
                        android:textColor="@color/black_7"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_photo_translator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/img_photo_camera"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_translator"
                        android:layout_marginHorizontal="12dp"
                        android:textSize="14sp"
                        android:textColor="@color/black_7"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_multi_translator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="12dp"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/img_multi_translate"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/multi_translation"
                        android:layout_marginHorizontal="12dp"
                        android:textSize="14sp"
                        android:textColor="@color/black_7"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="More..."
                    android:textSize="14sp"
                    android:layout_marginVertical="12dp"
                    android:textColor="@color/black_5"
                    android:textStyle="bold"
                    />

                <LinearLayout
                    android:id="@+id/btn_rate_us"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="12dp"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_rate_us"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_us"
                        android:layout_marginHorizontal="12dp"
                        android:textSize="14sp"
                        android:textColor="@color/black_7"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_tmc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_tmc"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_and_conditions"
                        android:layout_marginHorizontal="12dp"
                        android:textSize="14sp"
                        android:textColor="@color/black_7"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="12dp"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_privacy"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy"
                        android:layout_marginHorizontal="12dp"
                        android:textSize="14sp"
                        android:textColor="@color/black_7"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_share"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_share"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/share_app"
                        android:layout_marginHorizontal="12dp"
                        android:textSize="14sp"
                        android:textColor="@color/black_7"
                        />
                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/black_5"
            app:cardElevation="0dp"
            >
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_close_24"
                />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>