<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.LanguageFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/primary"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_back_circle" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/select_language_to_translate"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/btn_settings"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_settings_24"
                    android:visibility="invisible" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/adsView0"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/primary"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/rect_round_stroke_20"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="4dp">

                    <EditText
                        android:id="@+id/et_search_bar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:hint="@string/search_your_language"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/btn_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/icon_search" />
                </LinearLayout>


                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_background_enabled"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:fastScrollEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:id="@+id/adsView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/img_languages_ads"
                        android:scaleType="centerInside"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </FrameLayout>
</layout>